@@ -1099,11 +1099,14 @@ class Invoice(Workflow, ModelSQL, ModelView, TaxableMixin):
                 cls.raise_user_error('modify_invoice', (invoice.rec_name,))
 
     def get_rec_name(self, name):
+        items = []
         if self.number:
-            return self.number
-        elif self.reference:
-            return '[%s]' % self.reference
-        return '(%s)' % self.id
+            items.append(self.number)
+        if self.reference:
+            items.append('[%s]' % self.reference)
+        if not items:
+            items.append('(%s)' % self.id)
+        return ' '.join(items)
 
     @classmethod
     def search_rec_name(cls, name, clause):
