@@ -1,3 +1,4 @@
+* Show number and reference in invoice rec_name
 * Remove support for Python 2.7
 * Use today as fallback for invoice date report
 
